2008-11-14  Frederic Peters  <fpeters@gnome.org>

	* mail-maintainers.py, mail-maintainers.blacklisted-modules: added
	script to send an email to module maintainers

2008-11-06  Vincent Untz  <vuntz@gnome.org>

	* versions: oops, perl updated.

2008-11-05  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.1

2008-11-03  Andre Klapper  <a9016009@gmx.de>

	* schedule/2.26.schedule: Added.
	* schedule/automail.py: Updated.

2008-10-22  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable: update for 2.24.1

	* smoketesting/tarball-conversion-stable.config:
	* smoketesting/tarball-conversion.config: remove opencdk (unused)

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: needed gnome-applets and gnome-control-center
	2.24.0.1 for two crashers.

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: should be the final list of versions for 2.24.0.

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: updated again.

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: updated.

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion-stable.config: fix anjuta limit,
	and add a limit for gnome-common
	* versions-stable: first non-final version for 2.24.0

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: remove limits for 2.25
	(except glib/gtk+)

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config:
	* smoketesting/tarball-conversion.config: prepare stable data for 2.24

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: we'll use devhelp 0.21 for
	2.24.0, so bump the limit

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* tools/smoketesting/tarball-conversion.config: remove
	fast-user-switch-applet: it's deprecated with the new GDM.
