@@ -1,3 +1,8 @@
+2008-11-21  Vincent Untz  <vuntz@gnome.org>
+
+	* mail-maintainers.py: make the jhbuild moduleset more visible and add
+	a comment about updating it before running the script.
+
 2008-11-14  Frederic Peters  <fpeters@gnome.org>
 
 	* mail-maintainers.py, mail-maintainers.blacklisted-modules: added
